[fix] hamburger color in dark mode

--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -5,6 +5,10 @@
   z-index: 1;
   border-bottom: 1px solid var(--gray);
 
+  .hamburger-menu {
+    color: var(--text-secondary);
+  }
+
   .logo {
     color: var(--primary-color);
     font-size: 1.5rem;
